src/css/input.css
@font-face {
    font-family: 'SF Pro Display';
    src: url('../fonts/SFProDisplay-Regular.eot');
    src: url('../fonts/SFProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
        url('../fonts/SFProDisplay-Regular.woff') format('woff'),
        url('../fonts/SFProDisplay-Regular.ttf') format('truetype'),
        url('../fonts/SFProDisplay-Regular.svg#SFProDisplay-Regular') format('svg'),
        url('../fonts/SFProDisplay-Regular.OTF') format('otf');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

 /*  styles for space between footers and header 
  */
html,
body{
    height: 100%;
}
.wrapper {
    @apply min-h-full flex flex-col
}

 /* all container wraper */
.container-wrapper {
    @apply container max-w-[1151px] w-full mx-auto px-2
 }

/* btn learn more, contact */
@layer components {
    .btn-primary {
        @apply bg-blue-dark hover:bg-darkGray text-white text-text-lg py-4 px-5 mx-auto rounded-lg cursor-pointer transition-colors duration-75 focus:ring-2
    }

    /* btn see all  */
    .btn-see-all {
        @apply btn-primary px-[50px] rounded-[30px] shadow-2xl shadow-blue-dark hover:shadow-darkGray
    }

    /* underlined buttons grey */
    .more-link {
        @apply text-text-lg leading-[19px] font-bold underline text-darkGray hover:text-linksColor
        /* hover ar chans dizainshi */
    }

    .nav-links {
        @apply text-text-lg leading-[19px] text-linksColor hover:text-black cursor-pointer inline-block
    }

    /* rose titles of section responsive */
    .heading-base {
        @apply text-heading-md lg:text-heading-lg text-rose-dark
    }

    /* main paaragrafs responsive */
    .paragraph-base {
        @apply text-text-lg text-black
    }

    /* rose paginations a */
    .pagination-links {
        @apply relative rounded-full border border-solid border-rose-dark w-[46px] h-[46px] text-text-lg text-rose-dark transition-all duration-300 bg-transparent hover:bg-rose-dark hover:text-white active:bg-rose-dark active:text-white cursor-pointer
    }

    /* paginations iner text - 1 2 3  */
    .pagination-items {
        @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2
    }

    /* all container wraper */
    .wrapper {
        @apply container max-w-[1152px] w-full mx-auto px-6 md:px-0
    }

    /* labels გაასწორე შადოუ*/ 
    .label {
        @apply rounded-[40px] bg-white text-text-sm font-bold text-blue-dark px-2 cursor-pointer shadow-lg
        
    }

}

